tests/golden/type_errors/compound_assignment_non_number_variable.cd
let s = "x";
s += 1;
